[package]
name = "keydi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keydi"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.27"
image = { version = "0.25", default-features = false, features = ["ico"] }


[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
